# clean-rock

./: .dockerignore  .gitignore  Containerfile  README.md  pyproject.toml
infra/: backend.tf  cert.tf  cloud-init.sh.tftpl  dlm.tf  dns.tf  ec2.tf  ecr.tf  main.tf  providers.tf  redirect.js  sg.tf  site.tf  terraform.tfvars.example  variables.tf  vpc.tf
scripts/: import_csv.py  seed_bowlers.py  show_scores.py
seeds/: bowlers.json
src/clean_rock/: auth.py  builder.py  config.py  db.py  main.py  repo.py  stats.py
tests/: conftest.py  test_admin.py  test_repo.py  test_stats.py
web/admin/: index.html  login.html
web/public/: app.js  index.html.template  styles.css
