[project]
name = "clean-rock"
version = "0.1.0"
description = "Bowling score tracker for the Clean Rock crew"
requires-python = "==3.13.*"
dependencies = [
    "fastapi[standard]>=0.115",
    "itsdangerous>=2.2",
    "pandas>=2.2",
    "pydantic-settings>=2.5",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clean_rock"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
